# atoma-demo

./: Cargo.toml  README.md  rust-toolchain.toml
src/: contract.rs  contract_unit_tests.rs  lib.rs  service.rs  service_unit_tests.rs  state.rs
tests/: chat_transcript.rs
