[package]
name = "atoma-demo"
version = "0.1.0"
edition = "2021"

[features]
test = ["proptest", "test-strategy"]

[dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
async-graphql-derive = { version = "=7.0.2", default-features = false }
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299" }
proptest = { version = "1.6.0", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
test-strategy = { version = "0.4.0", optional = true }

[dev-dependencies]
atoma-demo = { path = ".", features = ["test"] }
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299", features = ["test"] }

[[bin]]
name = "atoma_demo_contract"
path = "src/contract.rs"

[[bin]]
name = "atoma_demo_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
